# case-macro

./: Cargo.toml  LICENCE.txt  README.md
src/: convert.rs  lib.rs
